# rAg

./: .gitignore  1.0_rag_own_text.ipynb  2.0_rag_on_pdf.ipynb  3.0_multi_docs.ipynb  Dockerfile  Procfile  main.py  pyproject.toml  requirements.txt
Vector/invoices/: chroma.sqlite3
Vector/pdf_documents/: chroma.sqlite3
Vector/pdf_documents/9c0d7629-3483-4cfe-9243-12712958e6bc/: index_metadata.pickle
data/: invoices.db
rag_api/: __init__.py  invoice_db.py  invoice_engine.py  main.py  models.py  query_parser.py  rag_engine.py
rag_api/static/: index.html
uploads/pdf/: Excel Sample Data.docx  SEM VII-FINAL REPORT Draft word file.docx  dataset_sentimentos_pt_3000 (1).xlsx
