[project]
name = "rag2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "transformers>=5.5.4",
    "uvicorn[standard]>=0.44.0",
]
