[project]
name = "rag2"
version = "0.2.0"
description = "Dual-mode RAG: Universal Document Q&A + Invoice Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "transformers>=5.5.4",
    "uvicorn[standard]>=0.44.0",
    "python-dateutil>=2.9.0",
    # --- Multi-format document support ---
    "pytesseract>=0.3.13",       # OCR wrapper for Tesseract
    "pymupdf>=1.24.0",            # PDF rendering to images for OCR (no Poppler needed)
    "Pillow>=11.0.0",            # Image processing
    "openpyxl>=3.1.5",           # Excel .xlsx read/write
    "pandas>=2.2.0",             # Excel/CSV data manipulation
    "python-pptx>=1.0.2",        # PowerPoint .pptx reading
    "xlrd>=2.0.1",               # Legacy Excel .xls support
    "pymupdf>=1.27.2.3",
]
